force-app/main/default/objects/Complex_Project__c/Complex_Project__c.object-meta.xml
<CustomObject>
    <description>Used to track complex projects with multiple iterations and releases</description>
    <label>Complex Project</label>
    <nameField>
        <label>Complex Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complex Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>