force-app/main/default/objects/Complex_Project__c/fields/Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Notes__c</fullName>
    <label>Analysis Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>