force-app/main/default/objects/Complex_Project__c/fields/Design_Notes__c.field-meta.xml
<CustomField>
    <fullName>Design_Notes__c</fullName>
    <label>Design Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>