force-app/main/default/objects/Complex_Project__c/fields/Development_Notes__c.field-meta.xml
<CustomField>
    <fullName>Development_Notes__c</fullName>
    <label>Development Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>