force-app/main/default/objects/Complex_Project__c/fields/Follow_Up_Project_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Project_Required__c</fullName>
    <label>Follow Up Project Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>