force-app/main/default/objects/Complex_Project__c/fields/Previous_Complex_Project__c.field-meta.xml
<CustomField>
    <fullName>Previous_Complex_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Complex Project</label>
    <referenceTo>Complex_Project__c</referenceTo>
    <relationshipLabel>Complex Projects</relationshipLabel>
    <relationshipName>Complex_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>