force-app/main/default/objects/Complex_Project__c/fields/Project_Items_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Project_Items_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Items Confirmed</label>
    <type>Checkbox</type>
</CustomField>