force-app/main/default/objects/Complex_Project__c/fields/QA_Testing_Notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Testing_Notes__c</fullName>
    <label>QA Testing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>