force-app/main/default/objects/Complex_Project__c/recordTypes/Standard_Project.recordType-meta.xml
<RecordType>
    <fullName>Standard_Project</fullName>
    <active>true</active>
    <label>Standard Project</label>
</RecordType>