force-app/main/default/objects/Complex_Project__c/validationRules/Confirm_Project_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_Project_Items</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Phase__c, &quot;Development&quot;)
&amp;&amp;
 Project_Items_Confirmed__c = false</errorConditionFormula>
    <errorMessage>All Project Items must be Committed, On-Hold, or Rejected before moving to the Development phase.</errorMessage>
</ValidationRule>