force-app/main/default/objects/Complex_Project__c/validationRules/Confirm_SOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_SOP</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Phase__c, &quot;Development&quot;)
&amp;&amp;
ISPICKVAL(SOP_Required__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>SOP_Required__c</errorDisplayField>
    <errorMessage>Please confirm SOP requirement before moving to the Development phase.</errorMessage>
</ValidationRule>